--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -42,6 +42,7 @@
     "@ledgerhq/hw-transport-webusb": "^6.20.0",
     "aes-js": "^3.1.2",
     "axios": "^0.27.2",
+    "mises-js-sdk": "^0.1.14",
     "big-integer": "^1.6.48",
     "bip39": "^3.0.2",
     "buffer": "^6.0.3",
