--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -53,6 +53,9 @@
     "pbkdf2": "^3.1.2",
     "secp256k1": "^4.0.2",
     "secretjs": "0.17.7",
-    "utility-types": "^3.10.0"
+    "utility-types": "^3.10.0",
+    "@cosmjs/proto-signing": "0.27.1",
+    "@cosmjs/stargate": "0.27.1",
+    "@cosmjs/tendermint-rpc": "0.27.1"
   }
 }
