--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -40,6 +40,7 @@
     "argon-dashboard-react": "^1.1.0",
     "axios": "^0.27.2",
     "mises-js-sdk": "^0.1.14",
+    "react-query": "^3.35.0",
     "bip39": "^3.0.2",
     "buffer": "^6.0.3",
     "chart.js": "^2.9.3",
