--- a/packages/stores/package.json
+++ b/packages/stores/package.json
@@ -34,6 +34,7 @@
     "eventemitter3": "^4.0.7",
     "mobx": "^6.1.7",
     "mises-js-sdk": "^0.1.14",
+    "react-query": "^3.35.0",
     "mobx-utils": "^6.0.3",
     "p-queue": "^6.6.2",
     "utility-types": "^3.10.0",
