feat: add sentry

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -40,6 +40,9 @@
     "argon-dashboard-react": "^1.1.0",
     "axios": "^0.27.2",
     "mises-js-sdk": "^0.1.14",
+    "@sentry/browser": "^6.0.0",
+    "@sentry/react": "^7.28.1",
+    "@sentry/tracing":"^7.28.1",
     "react-idle-timer": "^4.2.5",
     "react-query": "^3.35.0",
     "bip39": "^3.0.2",
