--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "keplr",
-  "description": "Keplr is a browser extension wallet for the Inter blockchain ecosystem.",
+  "name": "mises-wallet",
+  "description": "Mises Wallet is a browser extension wallet for the Inter blockchain ecosystem.",
   "private": true,
   "workspaces": {
     "packages": [
