--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -42,6 +42,7 @@
     "mises-js-sdk": "^0.1.14",
     "@sentry/browser": "^6.0.0",
     "@sentry/react": "^7.28.1",
+    "firebase": "^9.15.0",
     "@sentry/tracing":"^7.28.1",
     "react-idle-timer": "^4.2.5",
     "react-query": "^3.35.0",
