--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/react": "^16.14.4",
     "@iov/crypto": "2.1.0",
     "axios": "^0.27.2",
+    "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "libsodium": "file:./etc/noop",
     "libsodium-wrappers": "file:./etc/noop",
     "node-sass": "file:./etc/noop"
