--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -47,6 +47,7 @@
     {
       "resources": [
         "injectedScript.bundle.js",
+        "safeInjectedScript.bundle.js",
         "assets/logo-256.png",
         "blocklist.html"
       ],
