fix: hidden mises-safe

--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -45,11 +45,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": [
-        "injectedScript.bundle.js",
-        "safeInjectedScript.bundle.js",
-        "assets/logo-256.png"
-      ],
+      "resources": ["injectedScript.bundle.js", "assets/logo-256.png"],
       "matches": ["http://*/*", "https://*/*"]
     }
   ],
