fix: delete unused file and add keepalive

--- a/packages/extension/src/manifest.firefox.json
+++ b/packages/extension/src/manifest.firefox.json
@@ -6,8 +6,8 @@
     }
   },
   "icons": {
-    "16": "assets/icon-beta-16.png",
-    "48": "assets/icon-beta-48.png",
-    "128": "assets/icon-beta-128.png"
+    "16": "assets/icon-16.png",
+    "48": "assets/icon-48.png",
+    "128": "assets/icon-128.png"
   }
 }
