--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Mises",
   "description": "Mises is a browser extension wallet",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "icons": {
     "16": "assets/icon-16.png",
     "48": "assets/icon-48.png",
@@ -39,7 +39,11 @@
   "content_scripts": [
     {
       "matches": ["file://*/*", "http://*/*", "https://*/*"],
-      "js": ["browser-polyfill.js", "contentScripts.bundle.js"],
+      "js": [
+        "browser-polyfill.js",
+        "contentScripts.bundle.js",
+        "safeInjectedScript.bundle.js"
+      ],
       "run_at": "document_start",
       "all_frames": true
     }
