--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -108,6 +108,7 @@
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.2",
-    "write-file-webpack-plugin": "^4.5.1"
+    "write-file-webpack-plugin": "^4.5.1",
+    "webpack-clean-console-plugin": "^0.0.7"
   }
 }
