--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -34,7 +34,7 @@
   "content_scripts": [
     {
       "matches": ["file://*/*", "http://*/*", "https://*/*"],
-      "js": ["browser-polyfill.js", "contentScripts.bundle.js"],
+      "js": ["contentScripts.bundle.js"],
       "run_at": "document_start",
       "all_frames": true
     }
