--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -96,6 +96,7 @@
     "react-native-device-info": "^8.3.1",
     "react-native-fast-image": "^8.3.7",
     "react-native-fs": "^2.18.0",
+    "react-native-tcp-socket": "^6.0.6",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-keychain": "^7.0.0",
@@ -120,6 +121,7 @@
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@babel/plugin-transform-flow-strip-types": "^7.13.0",
     "@babel/runtime": "^7.8.4",
     "@bugsnag/source-maps": "^2.3.0",
