--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -46,7 +46,7 @@
     "mises-js-sdk": "^0.1.14",
     "react-idle-timer": "^4.2.5",
     "@metamask/browser-passworder": "^4.0.2",
-    "react-query": "^3.35.0",
+    "react-query": "^4.0.0",
     "big-integer": "^1.6.48",
     "bip39": "^3.0.2",
     "buffer": "^6.0.3",
@@ -60,6 +60,7 @@
     "utility-types": "^3.10.0",
     "@cosmjs/proto-signing": "0.27.1",
     "@cosmjs/stargate": "0.27.1",
-    "@cosmjs/tendermint-rpc": "0.27.1"
+    "@cosmjs/tendermint-rpc": "0.27.1",
+    "ethers": "^6.6.7"
   }
 }
