--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -3,7 +3,7 @@ require File.join(File.dirname(`node --print "require.resolve('react-native/pack
 require File.join(File.dirname(`node --print "require.resolve('@react-native-community/cli-platform-ios/package.json')"`), "native_modules")
 require File.join(File.dirname(`node --print "require.resolve('react-native-unimodules/package.json')"`), "cocoapods")
 
-platform :ios, '11.0'
+platform :ios, '13.0'
 
 target 'mobile' do
   use_unimodules!
@@ -24,6 +24,15 @@ target 'mobile' do
   # post_install do |installer|
   #   flipper_post_install(installer)
   # end
+  post_install do |installer|
+
+    # Added code below
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      end
+    end
+  end
 end
 
 target 'mobile-tvOS' do
@@ -34,3 +43,5 @@ target 'mobile-tvOS' do
     # Pods for testing
   end
 end
+
+
