--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -2,14 +2,25 @@ source 'https://cdn.cocoapods.org/'
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
 require File.join(File.dirname(`node --print "require.resolve('@react-native-community/cli-platform-ios/package.json')"`), "native_modules")
 require File.join(File.dirname(`node --print "require.resolve('react-native-unimodules/package.json')"`), "cocoapods")
-
-platform :ios, '13.0'
+platform :ios, '12.4'
+install! 'cocoapods', :deterministic_uuids => false
+production = ENV["PRODUCTION"] == "1"
 
 target 'mobile' do
   use_unimodules!
   config = use_native_modules!
-
-  use_react_native!(:path => config["reactNativePath"])
+  # Flags change depending on the env values.
+  flags = get_default_flags()
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :production => production,
+    :hermes_enabled => flags[:hermes_enabled],
+    :fabric_enabled => flags[:fabric_enabled],
+    :flipper_configuration => FlipperConfiguration.enabled,
+    # An absolute path to your application root.
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
+  )
 
   target 'mobileTests' do
     inherit! :complete
@@ -26,12 +37,8 @@ target 'mobile' do
   # end
   post_install do |installer|
 
-    # Added code below
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-      end
-    end
+    react_native_post_install(installer)
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
 
