--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -49,13 +49,14 @@
     "@keplr-wallet/unit": "0.11.17",
     "@ledgerhq/react-native-hw-transport-ble": "=6.20.0",
     "@react-native-async-storage/async-storage": "=1.16.3",
-    "@react-native-community/blur": "=3.6.0",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/netinfo": "^7.1.9",
-    "@react-navigation/bottom-tabs": "^5.11.8",
-    "@react-navigation/drawer": "^5.12.4",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.3",
+    "@react-native-community/blur": "4.3.2",
+    "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-native-community/netinfo": "6.0.0",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/compat": "^5.3.20",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^5.14.5",
     "@toruslabs/fetch-node-details": "^5.0.0",
     "@toruslabs/torus.js": "^5.0.1",
     "@walletconnect/client": "^1.6.4",
@@ -78,19 +79,19 @@
     "hyphenation.en-us": "^0.2.1",
     "hypher": "^0.2.5",
     "js-yaml": "^4.1.0",
-    "lottie-ios": "3.2.3",
-    "lottie-react-native": "^4.0.3",
-    "mobx": "^6.1.7",
-    "mobx-react-lite": "^3.2.0",
+    "lottie-ios": "3.4.1",
+    "lottie-react-native": "5.1.5",
+    "mobx": "^6.10.0",
+    "mobx-react-lite": "^4.0.3",
     "mobx-utils": "^6.0.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "react": "^16.14.0",
+    "react": "18.2.0",
+    "react-native": "0.71.6",
     "react-hook-form": "^7.16.1",
     "react-intl": "^5.20.4",
-    "react-native": "0.63.4",
-    "react-native-camera": "^4.0.1",
+    "react-native-camera": "4.0.1",
     "react-native-code-push": "^7.0.4",
     "react-native-crypto-polyfill": "file:./crypto-polyfill",
     "react-native-device-info": "^8.3.1",
@@ -101,12 +102,12 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-keychain": "^7.0.0",
     "react-native-localize": "^2.1.1",
-    "react-native-qrcode-svg": "^6.1.1",
-    "react-native-reanimated": "^1.13.3",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.18.1",
+    "react-native-qrcode-svg": "^6.1.1",    
+    "react-native-reanimated": "3.1.0",
+    "react-native-safe-area-context": "^4.1.7",
+    "react-native-screens": "3.19.0",
     "react-native-scrypt": "^1.2.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-unimodules": "^0.14.6",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-webview": "^11.14.2",
@@ -119,22 +120,24 @@
     "react-query": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@babel/plugin-transform-flow-strip-types": "^7.13.0",
-    "@babel/runtime": "^7.8.4",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "deprecated-react-native-prop-types": "2.2.0",
     "@bugsnag/source-maps": "^2.3.0",
     "@types/react-native": "^0.63.2",
-    "@types/react-test-renderer": "^16.9.2",
+    "@types/react-test-renderer": "18.0.0",
     "@types/sha.js": "^2.4.0",
     "browserify": "^17.0.0",
     "get-yarn-workspaces": "^1.0.2",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "metro-react-native-babel-preset": "^0.70.3",
     "pod-install": "^0.1.27",
     "react-native-svg-transformer": "^0.14.3",
-    "react-test-renderer": "16.13.1",
+    "react-test-renderer": "18.0.0",
     "tinyify": "^3.0.0"
   },
   "jest": {
