--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -36,7 +36,7 @@
     "long": "^4.0.0",
     "mobx": "^6.1.7",
     "mobx-utils": "^6.0.3",
-    "react": "^16.14.0",
+    "react": "18.2.0",
     "react-router": "^5.1.2",
     "utility-types": "^3.10.0"
   }
