--- a/packages/mobile/crypto-polyfill/package.json
+++ b/packages/mobile/crypto-polyfill/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "sideEffects": false,
   "dependencies": {
-    "expo-random": "^11.0.0",
+    "expo-crypto": "^12.4.1",
     "create-hash": "^1.2.0",
     "create-hmac": "^1.1.7",
     "browserify-cipher": "^1.0.1"
