--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -16,13 +16,11 @@
     "build:provider": "tsc --project tsconfig.provider.json && browserify -p tinyify build/injected/index.js -o build/injected/injected-provider.bundle.js && cp -rf build/injected/injected-provider.bundle.js android/app/src/main/assets/.",
     "start": "react-native start",
     "start:reset": "react-native start --reset-cache",
-    "generate:splash-image": "expo-splash-screen --background-color \"#FBF8FF\" --image-path ./src/assets/logo/splash-screen-only-k.png --image-resize-mode contain --status-bar-translucent --status-bar-background-color \"#FBF8FF\" --status-bar-style dark-content",
     "pod-install": "pod-install",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "sh ./scripts/fix-android-splash-screen-flash.sh && sh ./scripts/fix-ios-blur-view.sh && sh ./scripts/force-export-ble-manager-from-ledger.sh"
+    "postinstall": "sh ./scripts/fix-ios-blur-view.sh && sh ./scripts/force-export-ble-manager-from-ledger.sh"
   },
   "dependencies": {
-    "@amplitude/react-native": "^2.7.0",
     "@bugsnag/plugin-react-navigation": "^7.16.1",
     "@bugsnag/react-native": "^7.16.1",
     "@formatjs/intl-datetimeformat": "^4.1.6",
@@ -69,11 +67,12 @@
     "deepmerge": "^4.2.2",
     "delay": "^5.0.0",
     "eventemitter3": "^4.0.7",
-    "expo-apple-authentication": "^3.2.1",
-    "expo-clipboard": "^1.0.1",
-    "expo-random": "^11.0.0",
-    "expo-splash-screen": "=0.11.4",
-    "expo-web-browser": "^9.2.0",
+    "expo-modules-core": "^1.5.9",
+    "expo-apple-authentication": "^6.1.0",
+    "expo-clipboard": "^4.3.1",
+    "expo-crypto": "^12.4.1",
+    "expo-web-browser": "^12.3.2",
+    "expo-modules-autolinking": "^1.5.0",
     "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
     "hyphenation.en-us": "^0.2.1",
@@ -99,7 +98,7 @@
     "react-native-fs": "^2.18.0",
     "react-native-tcp-socket": "^6.0.6",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^7.0.0",
     "react-native-localize": "^2.1.1",
     "react-native-qrcode-svg": "^6.1.1",    
@@ -108,8 +107,8 @@
     "react-native-screens": "3.19.0",
     "react-native-scrypt": "^1.2.1",
     "react-native-svg": "12.1.1",
-    "react-native-unimodules": "^0.14.6",
     "react-native-url-polyfill": "^1.3.0",
+    "expo": "^48.0.0",
     "react-native-webview": "^11.14.2",
     "secretjs": "0.17.7",
     "sha.js": "^2.4.11",
@@ -117,7 +116,8 @@
     "string_decoder": "^1.3.0",
     "text-encoding": "^0.7.0",
     "utility-types": "^3.10.0",
-    "react-query": "^4.0.0"
+    "react-query": "^4.0.0",
+    "react-native-modal": "^13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
