--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ packages/proto-types/**/*.map
 !packages/proto-types/proto-types-gen/**/*.map
 
 packages/proto-types/proto-types-gen/src
+packages/proto-types/outputHash
